1st Draft of Portfolio
This first draft contains all the parallax backgrounds with some text to talk about myself and experience.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -3,7 +3,112 @@
   margin-right: auto;
   width: 650px;
 }
+body, html {
+  height: 100%;
+  margin: 0 auto;
+  font-size: 16px;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  line-height: 1.83m;
+  color: #666;
+  
+}
 
-#greeting-container {
-  margin-top: 20px;
+.pimg1, .pimg2, .pimg3, .pimg4, .pimg5{
+  position: relative;
+  opacity: 0.70;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+
+.pimg1{
+  background-image: url('/portfolio/src/main/webapp/images/background.png');
+  min-height: 100%;
+}
+
+.pimg2{
+  background-image: url('/portfolio/src/main/webapp/images/background2.png');
+  min-height: 400px;
+}
+ .pimg3{
+  background-image: url('/portfolio/src/main/webapp/images/background3.png');
+  min-height: 400px;
+}
+
+.pimg4{
+   background-image: url('/portfolio/src/main/webapp/images/background4.png');
+  min-height: 100%; 
+}
+.pimg5{
+   background-image: url('/portfolio/src/main/webapp/images/background5.png');
+  min-height: 400px; 
+}
+.section{
+  text-align: center;
+  padding: 40px 80px;
+
+}
+
+.section-light{
+  background-color: #f4f4f4;
+  color: #666;
+}
+
+.section-dark{
+  background-color: #282e34;
+  color:#ddd ;
+}
+
+.ptext{
+  position: absolute;
+  top: 35%;
+  width: 100%;
+  text-align: center;
+  color: black;
+  font-size: 35px;
+  letter-spacing: 8px;
+  text-transform: uppercase;
+}
+
+.ptext .border{
+  background-color: #111;
+  color: white;
+  padding: 20px;
+}
+
+.ptext .border .trans{
+  background-color: transparent;
+}
+
+@media(max-width:568px){
+  .pimg1, .pimg2, .pimg3{
+    background-attachment: scroll;
+  }
+}
+
+footer {
+  color: #fff;
+  text-align: center;
+}
+
+.copyright {
+  margin-bottom: 20px;
+  font-size: 15px;
+  padding-top: 500px;
+  padding-left: 300px;;
+  text-align: center;
+  position: absolute;
+  color: white;
+}
+
+.copyright a {
+  font-size: 16px;
+  color: #48dbfb;
+  font-weight: 500;
+}
+
+.social_icons a:hover {
+  color: #48dbfb;
 }
